# voxelvis

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO  data_map.py  data_map_final.py  data_map_final_occfusion.py  example.cpp  example.py  main.cpp  occ_vis.py
.github/workflows/: release-ubuntu.yaml  release-win.yaml  release.yaml
src/: auxgrid.cpp  auxgrid.h  bridge.hpp  camera.cpp  camera.h  capture.cpp  capture.h  common.cpp  common.h  frustum.hpp  imgui_impl_x11.cpp  imgui_impl_x11.h  imgui_impl_x11_main.cpp  instance.cpp  instance.h  voxelvis.cpp  voxelvis.h
src/ui/: im_image.cpp  im_image.h  render_base.h
tests/: CMakeLists.txt  multiply_test.cpp  sb_thread.cpp
